--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "github-dark-mode",
   "version": "0.0.1",
   "description": "Github Dark Mode for Visual Studio Code",
-  "main": "dist/index.js",
   "license": "MIT",
+  "engines": {
+    "vscode": "^1.52.0"
+  },
   "scripts": {
     "dev": "concurrently -k \"tsc --watch\" \"nodemon ./dist/index.js\"",
     "build": "tsc"
@@ -12,5 +14,14 @@
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6",
     "typescript": "^4.1.2"
+  },
+  "contributes": {
+    "themes": [
+      {
+        "label": "GitHub Dark Mode",
+        "uiTheme": "vs-dark",
+        "path": "./themes/github-dark-mode.json"
+      }
+    ]
   }
 }
