--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "vscode": "^1.52.0"
   },
   "scripts": {
-    "dev": "concurrently -k \"tsc --watch\" \"nodemon ./dist/index.js\"",
+    "dev": "concurrently -k \"tsc --watch\" \"nodemon -w ./dist ./dist/index.js\"",
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/node": "^14.14.12",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6",
     "typescript": "^4.1.2"
