--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/lodash.flow": "^3.5.6",
     "@types/node": "^14.14.12",
     "concurrently": "^5.3.0",
+    "lodash.flow": "^3.5.0",
     "nodemon": "^2.0.6",
     "typescript": "^4.1.2"
   },
